progfiguration_blacksite/src/progfiguration_blacksite/roles/seedboxk8s/manifests/staging/seedbox-whoami/whoami.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-deployment
  namespace: whoami
spec:
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami
        ports:
        - containerPort: 80
          name: whoami-http
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: whoami
spec:
  selector:
    app: whoami
  ports:
    # The external port is deliberately not handled by the ingress controller
    # so that we can test before we have the ingress controller working.
    - protocol: TCP
      port: 80
      targetPort: whoami-http
  type: ClusterIP
